--- a/project_0/p1.ipynb
+++ b/project_0/p1.ipynb
@@ -1964,7 +1964,8 @@
    "id": "76604a00",
    "metadata": {},
    "source": [
-    "### Task 6\n"
+    "### Task 6\n",
+    "https://github.com/TraceOnSnow/576-Projects.git"
    ]
   }
  ],
